--- a/src/assets/styles/common/varibles.styl
+++ b/src/assets/styles/common/varibles.styl
@@ -1,4 +1,4 @@
 $bgColor = #00bcd4
-$fontColor = #212121
+$fontColor = #898989
 $lightFontColor = #e7e7e7
-$enlightFontColor = #ff8300
+$borderColor = #f3f4f5
